altera z-index e posição para fixed

--- a/src/components/layout/menuMobile/styles.scss
+++ b/src/components/layout/menuMobile/styles.scss
@@ -7,6 +7,7 @@
   right: 30px;
   top: 30px;
   cursor: pointer;
+  z-index: 2;
 
   &::after,
   &::before {
@@ -38,9 +39,14 @@
 
 .menu-mobile-content {
   display: none;
-  background: rgba(0, 0, 0, 0.2);
-  width: 100vw;
-  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
 
   &.active {
     display: block;
